set background transparent to remove thin white border on card

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -196,6 +196,7 @@ h2 {
 
 #greeting-card,
 #greeting-card-snap {
+    background: transparent;
     width: 600px;
     height: 600px;
     position: relative;
