Replace inner card text with image

--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -11,11 +11,7 @@
                     <img id="greeting-card-image" class="show" src="{{snap.base64image}}">
                 </div>
                 <div id="greeting-card-text" class="greeting-card text-center text-dark d-flex justify-content-center">
-                    <div id="inner-card-content" class="d-block fw-bold">
-                        <p class="my-2 fs-3"> Happy St. Patrick's Day 2021!
-                        </p>
-                        
-                    </div>
+                    <div id="inner-card-content"></div>
                 </div>
             </div>
         </div>
