--- a/snappaddy/templates/paddy_snap.html
+++ b/snappaddy/templates/paddy_snap.html
@@ -6,7 +6,7 @@
 
 <!-- COMMENTED OUT THE INTRO ANIMATION FOR NOW -->
 
-<div id="intro-animation" class="container-fluid">
+<!-- <div id="intro-animation" class="container-fluid">
     <h1>Paddy Snap</h1>
     <div id="running-leprechaun">
         <h2>Nya ha ha..</h2>
@@ -15,7 +15,7 @@
     <div id="chasing-paddy">
         <img src="/static/img/paddy_chasing.webp" alt="paddy running">
     </div>
-</div>    
+</div>     -->
 
 <div class="has-greeting-card">
     <div class="row">
