--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -261,6 +261,11 @@ body .container-fluid .row .col-12
     align-items: center;
 }
 
+#greeting-card-photo {
+    display: flex;
+    align-items: center;
+}
+
 #greeting-card-camera {
     width: 100%;
     height: 100%;
