Adding image back iN

--- a/snappaddy/templates/test.html
+++ b/snappaddy/templates/test.html
@@ -16,7 +16,7 @@
                 </div>
                 <canvas id="greeting-card-canvas"></canvas>
                 <div class="greeting-card" id="greeting-card-photo">
-                    <img src="{% static 'img/test/png' %}">
+                    <img id="greeting-card-image">
                 </div>
             </div>
         </div>
