--- a/snappaddy/templates/test.html
+++ b/snappaddy/templates/test.html
@@ -64,8 +64,8 @@
 </script>
 <script>
 
-let width = 600;    // We will scale the photo width to this
-let height = 600;     // This will be computed based on the input stream
+let width = 500;    // We will scale the photo width to this
+let height = 500;     // This will be computed based on the input stream
 
 let streaming = false;
 
@@ -122,7 +122,6 @@ function checkMobile(){
         $('button i').addClass('fa-2x');
     }
     else if(isMobile.any()){
-        console.log( window.innerWidth);
         width = window.innerWidth - 80;
         height = window.innerWidth - 80;
         document.getElementById('greeting-card').style.width = width + 'px';
@@ -188,7 +187,7 @@ function clearphoto() {
 
     var data = canvas.toDataURL('image/png');
     photo.setAttribute('src', data);
-
+    if(photo.width )
     toggleReset();
 }
 
@@ -213,6 +212,9 @@ function takepicture() {
     let bImge = '/' + background.join('/')
     console.log(bImge)
     inputCutout.value = bImge;
+    if(photo.width < width){
+        photo.classList.add('greeting-card-image-center');
+    }
 
     toggleReset();
 }
