--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -89,6 +89,11 @@
         } else {
             $('button i').removeClass('fa-2x');
         }
+
+        const photo = document.getElementById('greeting-card-image');
+        if(photo.width < width){
+            photo.classList.add('greeting-card-image-center');
+        }
     }
     </script>
 {% endblock %}
